-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.4
-
None
-
-
c5aed5ae2 (dev), a3c66ed7a (6.7), c991b34f2 (6.6), ef93cbe42 (tqtc/lts-6.5)
QWaylandGLContext::makeCurrent() calls QWaylandWindow::createDecoration() but the function itself is not written to be thread safe. It has been that way since at least before 2014 (https://codereview.qt-project.org/c/qt/qtwayland/+/95947) and we haven't seen any issues with it, probably because createDecoration() is called seldomly.
However, there is the possibility that something might fail there.
- resulted from
-
QTBUG-105308 ASSERT failure in QWindow: "Updates can only be scheduled from the GUI (main) thread"
-
- Closed
-
For Gerrit Dashboard: QTBUG-105703 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
529547,4 | client: Avoid creating decorations in the render thread | dev | qt/qtwayland | Status: MERGED | +2 | 0 |
529677,2 | client: Avoid creating decorations in the render thread | 6.7 | qt/qtwayland | Status: MERGED | +2 | 0 |
529768,2 | client: Avoid creating decorations in the render thread | 6.6 | qt/qtwayland | Status: MERGED | +2 | 0 |
625334,4 | client: Avoid creating decorations in the render thread | tqtc/lts-6.5 | qt/tqtc-qtwayland | Status: MERGED | +2 | 0 |