client: Avoid creating decorations in the render thread

createDecoration is called when on the main thread from when window
flags change, implicitly from initWindow, and also every
handleWindowStatesChanged which will be called when we get the first
configure event in an xdg shell.

There is no need to create the decoration in
QWaylandGLContext::makeCurrent. Any current call to makeCurrent before
the platform window is shown will not create a decoration as there's a check for a shell surface. Any call afterwards  will have already been handled by initWindow. Similarly the SHM backend store does not need to handle decorations itself.

Fixes: QTBUG-105703
Change-Id: I644cece28277131cf7a65eaa234ff08c8431d544
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit c5aed5ae22f00e4b6c3be7051560b297bc10d941)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit a3c66ed7a868e57f1f7f6a051b85e2fc4899e538)
(cherry picked from commit c991b34f232d84e34cb15f4c6f25ccaef74e3499)